syntax = "proto3";
package telemetry;

service Telemetry {
  rpc SendPacket (PacketRequest) returns (PacketResponse) {}
  rpc GetPacket (PacketRequest) returns (DataResponse) {
  }
}

message PacketRequest {
  string Packet = 1;
}

message PacketResponse {
  bool success = 1;
}

message DataResponse {
  string Packet = 1;
}